# MedTechInnovators

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
data/: generated_data.csv
src/: generate_patient_data.py  validate_data.py  visualize_patient_flow.py
src/MedTechInnovators.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/UNKNOWN.egg-info/: SOURCES.txt
tests/: test_generate_data.py  test_validate_data.py  test_visualize_data.py
